tests/samples/invalid/argument_type_mismatch.pn

fn foo(x: i32) -> i32
{
	return:
	x
}

fn main() -> i32
{
	return:
	foo(true)
}
